tests/compiletests/ui/lang/issue-452.stderr
error: SPIR-V `OpFunctionPointerCallINTEL` instruction requires one of these extensions: `SPV_INTEL_function_pointers`
  --> $DIR/issue-452.rs:12:16
   |
LL |     let _ = if cmp(&a) <= cmp(&b) { a } else { b };
   |                ^^^^^^^
   |
note: used from within `issue_452::use_cmp`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: used from within `issue_452::main`
  --> $DIR/issue-452.rs:12:16
   |
LL |     let _ = if cmp(&a) <= cmp(&b) { a } else { b };
   |                ^^^^^^^
note: used from within `issue_452::use_cmp`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: called by GLCompute entry-point `main`
  --> $DIR/issue-452.rs:16:8
   |
LL | pub fn main() {
   |        ^^^^

error: SPIR-V `OpConstantFunctionPointerINTEL` instruction requires one of these extensions: `SPV_INTEL_function_pointers`
   |
note: used from within `issue_452::main`
  --> $DIR/issue-452.rs:12:16
   |
LL |     let _ = if cmp(&a) <= cmp(&b) { a } else { b };
   |                ^^^^^^^
note: used from within `issue_452::use_cmp`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: called by GLCompute entry-point `main`
  --> $DIR/issue-452.rs:16:8
   |
LL | pub fn main() {
   |        ^^^^

error: SPIR-V `StorageClass.CodeSectionINTEL` operand requires one of these extensions: `SPV_INTEL_function_pointers`
   |
   = note: used by unnamed constant
note: used from within `issue_452::main`
  --> $DIR/issue-452.rs:12:16
   |
LL |     let _ = if cmp(&a) <= cmp(&b) { a } else { b };
   |                ^^^^^^^
note: used from within `issue_452::use_cmp`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: called by GLCompute entry-point `main`
  --> $DIR/issue-452.rs:16:8
   |
LL | pub fn main() {
   |        ^^^^

error: SPIR-V `OpFunctionPointerCallINTEL` instruction requires one of these extensions: `SPV_INTEL_function_pointers`
  --> $DIR/issue-452.rs:12:27
   |
LL |     let _ = if cmp(&a) <= cmp(&b) { a } else { b };
   |                           ^^^^^^^
   |
note: used from within `issue_452::use_cmp`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: used from within `issue_452::main`
  --> $DIR/issue-452.rs:12:27
   |
LL |     let _ = if cmp(&a) <= cmp(&b) { a } else { b };
   |                           ^^^^^^^
note: used from within `issue_452::use_cmp`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: called by GLCompute entry-point `main`
  --> $DIR/issue-452.rs:16:8
   |
LL | pub fn main() {
   |        ^^^^

error: aborting due to 4 previous errors

